test/data/syntax-errors/bad-variable-name.jen
3aariable := 12
Jen := 8
